--- a/src/main/resources/playersdata.yml
+++ b/src/main/resources/playersdata.yml
@@ -2,6 +2,7 @@ Items:
   Slot-1:
     Material: DIAMOND_SHOVEL
     Name: "&bDiamond Shovel"
+    Unbreakable: true
     Amount: 1
     Lore:
       - ""
