--- a/support_v_1_8_R3/pom.xml
+++ b/support_v_1_8_R3/pom.xml
@@ -20,10 +20,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 </project>
